Simplify and improve consistency with Android and iOS targets + handle key, gamepad events + fix threading issues on Android + fix Android restarting on orientation change + fix iOS orientation change  + fix GpuShapeView on android + unify buildSrc with korge-gradle-plugin + support running iOS targets on korge-sandbox and samples directly in korge-next (#661)