@@ -1,23 +1,13 @@
 package com.soywiz.korlibs.modules
 
+import com.soywiz.korge.gradle.targets.isLinux
+import com.soywiz.korge.gradle.targets.isMacos
 import com.soywiz.korlibs.kotlin
 import org.gradle.api.NamedDomainObjectSet
 import org.gradle.api.tasks.InputFiles
 import org.gradle.api.tasks.JavaExec
 import org.gradle.kotlin.dsl.provideDelegate
-
-val beforeJava9 = System.getProperty("java.version").startsWith("1.")
-
-val javaAddOpens = ArrayList<String>().apply {
-    add("--add-opens=java.desktop/sun.java2d.opengl=ALL-UNNAMED")
-    add("--add-opens=java.desktop/java.awt=ALL-UNNAMED")
-    add("--add-opens=java.desktop/sun.awt=ALL-UNNAMED")
-    if (isMacos) {
-        add("--add-opens=java.desktop/sun.lwawt.macosx=ALL-UNNAMED")
-        add("--add-opens=java.desktop/sun.lwawt=ALL-UNNAMED")
-    }
-    if (isLinux) add("--add-opens=java.desktop/sun.awt.X11=ALL-UNNAMED")
-}.toTypedArray()
+import com.soywiz.korge.gradle.targets.jvm.JvmAddOpens
 
 open class KorgeJavaExec : JavaExec() {
     private val jvmCompilation by lazy { project.kotlin.targets.getByName("jvm").compilations as NamedDomainObjectSet<*> }
@@ -35,7 +25,7 @@ open class KorgeJavaExec : JavaExec() {
 
     init {
         systemProperties = (System.getProperties().toMutableMap() as MutableMap<String, Any>) - "java.awt.headless"
-        if (!beforeJava9) jvmArgs(*javaAddOpens)
+        if (!JvmAddOpens.beforeJava9) jvmArgs(*JvmAddOpens.createAddOpensTypedArray())
         //project.afterEvaluate {
             //if (firstThread == true && OS.isMac) task.jvmArgs("-XstartOnFirstThread")
         //}
